# profile.mobile.apps.native.privacy-setting

./: CMakeLists.txt  project.config
common/include/: common_utils.h
common/src/: common_utils.c
packaging/: org.tizen.privacy-setting.spec  org.tizen.privacy-setting.xml  org.tizen.ug-setting-privacy-efl.spec  org.tizen.ug-setting-privacy-efl.xml  ug-setting-privacy-efl.spec  ug-setting-privacy-efl.xml
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_US.po  es_ES.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+9 more)
ug/: CMakeLists.txt
ug/include/: privacy_setting_ug.h  privacy_view.h
ug/src/: main_privacy_setting_ug.c  privacy_list_view.c  privacy_menu_view.c  privacy_package_list_view.c
ui/: CMakeLists.txt
ui/include/: .privacy_view.h.swp  privacy_setting.h  privacy_view.h
ui/src/: main_privacy_setting.c  privacy_guard_list_view.c  privacy_guard_package_list_view.c  privacy_list_view.c  privacy_menu_view.c  privacy_package_list_view.c
